# soul-test-netflow

./: .gitignore  README.md  make_headline_figure.py
julia-mtk/: CLOSEOUT.md  (+4 more)
python/: CLAUDE.md  CONTEXT.md  HANDOFF.md  README.md  pyproject.toml
python/docs/: VALIDATION.md  expert-qa.md
python/docs/adr/: 0001-vera-is-code-comparison.md
python/docs/paper/: methods-paper-plan.md  netflow-methods.aux  netflow-methods.out  netflow-methods.tex  netflow.aux  netflow.out  netflow.tex
python/netflow/: __init__.py  viz.py  viz_interactive.py
python/netflow/bench/: fuel_array.py  full_physics_ladder.py  resistor_mesh.py  vera_codecompare.py
python/netflow/core/: __init__.py  assembly.py  edge.py  exceptions.py  iterate.py  network.py  node.py  result.py  solver.py  transient.py
python/references/: CASL-U-2013-0150-001.pdf:Zone.Identifier  CASL-U-2016-1059-000.pdf:Zone.Identifier  INDEX.md  aviles-2017-mc21-cobra-ie.md  aviles-2017-mc21-cobra-ie.txt  collins-2019.txt  collins-2020-beavrs-vera.md  frapcon-ifa432-ornl-pub36515.txt  frapcon-ifa432-ornl-tm-2012-195.md  gehin-2013-wbn1-zppt.md  godfrey-2014-vera-spec.md  godfrey-2014-vera-spec.txt  kelly-2017-mc21-ctf-vera.md  kelly-2017-mc21-ctf-vera.txt  kim-2023-wbn1-polaris-parcs.md  kim-2023-wbn1-polaris-parcs.txt  kim-2024-wbn1-cycles-1-3.md  nrc-ml25113a083.txt  palmtag-2013-vera-p6-coupled.md  references.json
python/results/: startup_3d.html  startup_3d_7x7_jac.html  startup_3d_pwr17x17.html  subchannel_3d.html
python/tests/: test_coupled_th.py  test_layering.py  test_neutronics_thermal.py  test_subchannel.py
(+177 files in other folders)
